--- a/package.json
+++ b/package.json
@@ -10,27 +10,37 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "expo": "^48.0.0",
-    "expo-cli": "^6.0.6",
-    "expo-status-bar": "~1.4.4",
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-navigation/native": "7.1.8",
+    "@react-navigation/native-stack": "7.3.12",
+    "expo": "^53.0.8",
+    "expo-status-bar": "~2.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.72.0",
     "react-native-elements": "^3.4.2",
     "react-native-navigation": "^7.24.0",
     "react-native-paper": "^4.10.1",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.11"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.18.11",
+    "react-router-dom": "*"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.27.1",
     "@types/react": "~18.0.27",
     "@types/react-native": "~0.64.12",
+    "babel-preset-expo": "^13.1.11",
+    "metro": "^0.82.3",
+    "metro-config": "^0.82.3",
+    "metro-core": "^0.82.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "typescript": "^4.9.4"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "@expo/cli": "xxx"
+  }
 }
